--- a/quizwebsite/src/post_quiz/post_quiz_page.module.css
+++ b/quizwebsite/src/post_quiz/post_quiz_page.module.css
@@ -5,3 +5,15 @@
     justify-content: center;
     height: 90vh;
   }
+
+.question-review-section {
+  max-height: 400px; 
+  overflow-y: auto; 
+  border: 1px solid #ccc; 
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.question-item {
+  margin-bottom: 15px;
+}  
