--- a/quizwebsite/src/navbar/navbar.module.css
+++ b/quizwebsite/src/navbar/navbar.module.css
@@ -37,6 +37,7 @@
   background-color: #4CAF50;
   color: white;
   padding: 10px 20px;
+  text-decoration: none;
   border: none;
   cursor: pointer;
   border-radius: 4px;
